packages/typ/tests/fixtures/diagnostics/0347_labels_wrong_x_type_02.ml.expected
File "0347_labels_wrong_x_type_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0347_labels_wrong_x_type_02 is not a valid module name.

File "0347_labels_wrong_x_type_02.ml", line 2, characters 21-25:
2 | let _ = pick_beta ~x:true ~y:false
                         ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
