packages/typ/tests/fixtures/diagnostics/0347_labels_wrong_x_type_02.ml
let pick_beta ~x:(x : int) ~y:(y : bool) = x
let _ = pick_beta ~x:true ~y:false
